--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: bergen
+Theme Name: Bergen
 Theme URI: https://github.com/tommielandstrom/bergen
 Author: Tommie Landström
 Author URI: http://tommielandstrom.se
@@ -8,7 +8,6 @@ Version: 1.0.6
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: light, gray, white, one-column, two-columns, right-sidebar, custom-background, custom-header, custom-menu, editor-style, featured-images, full-width-template, microformats, post-formats, rtl-language-support, sticky-post, translation-ready
-Text Domain: felles
 GitHub Theme URI: https://github.com/tommielandstrom/bergen
 
 */
